--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
+    background-color: blue;
     font-family: Arial, sans-serif;
     font-weight: 700;
     font-size: 50px;
+}
+a {
     color: #ffffff;
 }
